filter only 400 logs/04-gateway-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-gateway-proxy
  namespace: envoy-gateway-system
spec:
  selector:
    app.kubernetes.io/component: proxy
    app.kubernetes.io/managed-by: envoy-gateway
    app.kubernetes.io/name: envoy
    gateway.envoyproxy.io/owning-gateway-name: demo-gateway
    gateway.envoyproxy.io/owning-gateway-namespace: default
  ports:
  - name: http
    port: 80
    targetPort: 10080
